--- a/contact.html
+++ b/contact.html
@@ -25,5 +25,19 @@
     Center!5e0!3m2!1sen!2sus!4v1498753770173" width="425" height="350"
     frameborder="0" style="border:0" allowfullscreen></iframe>
 
+    <form action="#" method ="post">
+      <label>Name</label>
+      <input type="text" id ="fullname" name="fullname" placeholder="your name" required>
+      <label>Email</label>
+      <input type="email" id ="email" name="email" placeholder="your email" required>
+      <label>Phone</label>
+      <input type="tel" id ="phone" name="phone" placeholder="your phone" (optional)>
+      <label for="message"> Message</label>
+      <textarea id="message" name="message" rows="10"> </textarea>
+      <input type="submit" value="send">
+      
+
+    </form>
+
 </body>
 </html>
