--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Exceptional</h1>
-    <h2>Realty Group<h2>
+    <h2>Realty Group</h2>
 
       <a href="index.html"> About </a>
       <a href="real-estate-listings.html"> New Properties </a>
