--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,11 @@
       <label>Email</label>
       <input type="email" id ="email" name="email" placeholder="your email" required>
       <label>Phone</label>
-      <input type="tel" id ="phone" name="phone" placeholder="your phone" (optional)>
+      <input type="tel" id ="phone" name="phone" placeholder="your phone (optional)">
       <label for="message"> Message</label>
       <textarea id="message" name="message" rows="10"> </textarea>
       <input type="submit" value="send">
-      
+
 
     </form>
 
