--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
     pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
     culpa qui officia deserunt mollit anim id est laborum.</p>
 
+    <!--promo video -->
 
+    <video controls>
+      <source src="videos/real-estate.mp4" type="video/mp4">
+      Your browser does not support HTML5 video. <a href="http://browsehappy.com"
+      target="_blank"> Please upgrade your browser</a>.
+    </video>
   </body>
 </html>
